<resources>
    <string name="app_name">FoodDiary</string>
    <string name="profile">Profile</string>
    <string name="num_calories">\ncalories</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snacks</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="height">Height</string>
    <string name="birth">Birth</string>
    <string name="gender">Gender</string>
    <string name="target">Target</string>
    <string name="activity">Activity</string>
    <string name="target_weigth">Target weight</string>
    <string name="save">Save</string>
    <string name="food">Food</string>
    <string name="size">Size</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="size_unit">%d%s</string>
    <string name="unit">Unit</string>
    <string name="add">Add</string>
    <string name="meal">Meal</string>
    <string name="g_0">0g</string>
    <string name="amount_g">%.1fg</string>
    <string name="added_successfully">Record added successfully!</string>
</resources>