<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/ivImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="200dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/anime_girl"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="30"
            android:minWidth="100sp"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/height"
        app:layout_constraintEnd_toStartOf="@id/btnBirth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:minWidth="100sp"
            android:text="154"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnBirth"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:minWidth="100sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="12.12.1122"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/lHeight"
        app:layout_constraintEnd_toStartOf="@id/lGender"
        app:layout_constraintStart_toEndOf="@id/lHeight"
        app:layout_constraintTop_toTopOf="@id/lHeight" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lGender"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/gender"
        android:labelFor="@id/genderDropDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBirth"
        app:layout_constraintTop_toBottomOf="@id/lName">

        <AutoCompleteTextView
            android:id="@+id/genderDropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="7"
            android:minWidth="140sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lTarget"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/target"
        android:labelFor="@id/targetDropdown"
        app:layout_constraintEnd_toEndOf="@id/lGender"
        app:layout_constraintStart_toStartOf="@id/lHeight"
        app:layout_constraintTop_toBottomOf="@id/lHeight">

        <AutoCompleteTextView
            android:id="@+id/targetDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="16"
            android:minWidth="100sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lTargetWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/target_weigth"
        app:layout_constraintEnd_toEndOf="@id/lGender"
        app:layout_constraintStart_toStartOf="@id/lTarget"
        app:layout_constraintTop_toBottomOf="@id/lTarget">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvTargetWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:maxLength="5"
            android:minWidth="100sp"
            android:text="54"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lActivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/activity"
        android:labelFor="@id/activityDropdown"
        app:layout_constraintEnd_toEndOf="@+id/lGender"
        app:layout_constraintStart_toStartOf="@id/lHeight"
        app:layout_constraintTop_toBottomOf="@id/lTargetWeight">

        <AutoCompleteTextView
            android:id="@+id/activityDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>